--- a/analog.html
+++ b/analog.html
@@ -59,7 +59,7 @@
      
      
      <div class="flex-container">
-          <h2>2 : Non-Inverting Amplifier using Op.Amp IC741</h2>
+          <h2>2 : (*Wrong/Update-Soon*)Non-Inverting Amplifier using Op.Amp IC741</h2>
       </div>
       <div class="flex-container">
       <div>
