--- a/analog.html
+++ b/analog.html
@@ -139,8 +139,8 @@
          </a>
       </div>
       <div>
-         <a target="_blank" href="./src/Analog/7.2.png">
-           <img src="./src/Analog/7.2.png" alt="Forest">
+         <a target="_blank" href="./src/Analog/7.2_.png">
+           <img src="./src/Analog/7.2_.png" alt="Forest">
          </a>
       </div>
       </div>    
@@ -152,8 +152,8 @@
       </div>
       <div class="flex-container">
       <div>
-         <a target="_blank" href="./src/Analog/8.png">
-           <img src="./src/Analog/8.png" alt="Forest">
+         <a target="_blank" href="./src/Analog/8_.png">
+           <img src="./src/Analog/8_.png" alt="Forest">
          </a>
       </div>
       </div>    
